--- a/todo.txt
+++ b/todo.txt
@@ -1,3 +1,4 @@
 -- remove or refactor './add-events'
 -- color only outer cubies
 -- why isn't Animator#end working?
+-- dynamic duration: speed up animation when typing quickly
