--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
--- remove or refactor './add-events'
+-- should event-handler and input-handler be combined? probably.
 -- color only outer cubies
 -- why isn't Animator#end working?
 -- dynamic duration: speed up animation when typing quickly
 -- allow switching between dimensions
 -- make the site look nice
+-- make sass not horrible
