--- a/todo.txt
+++ b/todo.txt
@@ -7,3 +7,4 @@
 -- make sass not horrible
 -- fix canvas positioning (some dimensions are cut off)
 -- clicking on line helpers don't return correct normals
+-- refactor "global" variables and importing them
