Use the npm scripts

--- a/todo.txt
+++ b/todo.txt
@@ -12,3 +12,4 @@
 -- robust-ify detecting click direction
 -- should Grabber#raycast filter intersects? probably.
 -- fill out rubiks cube innards
+-- un-version dist/
