--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,4 @@
 -- fix clicking on canvas then dragging off
 -- there are two sets of logic for moving: mouse and keyboard. make one.
 -- de-complexify storing and returning move data in rubiks-cube.js
+-- delete all solve moves when cube is solved
