--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,4 @@
 -- there are two sets of logic for moving: mouse and keyboard. make one.
 -- de-complexify storing and returning move data in rubiks-cube.js
 -- delete all solve moves when cube is solved
+-- demos don't loop
