--- a/todo.txt
+++ b/todo.txt
@@ -16,3 +16,4 @@
 -- there are two sets of logic for moving: mouse and keyboard. make one.
 -- de-complexify storing and returning move data in rubiks-cube.js
 -- demos don't loop
+-- cache result in RubiksCube#solve, maybe?
