--- a/todo.txt
+++ b/todo.txt
@@ -18,3 +18,4 @@
 -- demos don't loop
 -- cache result in RubiksCube#solve, maybe?
 -- RubiksCube and Animator communication is still not there yet.
+-- Animator#ready and RubiksCube#afterMovesCompletion are very weird
